--- a/examples/package.json
+++ b/examples/package.json
@@ -8,7 +8,8 @@
     "build": "parcel build index.html --public-url ./"
   },
   "dependencies": {
-    "react-app-polyfill": "^1.0.0"
+    "react-app-polyfill": "^1.0.0",
+    "react": "^16.13.1"
   },
   "alias": {
     "react": "../node_modules/react",
