--- a/examples/package.json
+++ b/examples/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react-app-polyfill": "^1.0.0",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "alias": {
     "react": "../node_modules/react",
