--- a/examples/package.json
+++ b/examples/package.json
@@ -1,7 +1,7 @@
 {
   "name": "example",
   "version": "1.0.0",
-  "main": "base.js",
+  "main": "index.html",
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
